# networthdash

./: .gitignore  README.md  __init__.py  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: check.yml  doc.yml  test.yml
docs/: CHANGELOG.md  csv.md  index.md  reference.md  visualisation.md
example/: __init__.py  nwd_example.csv  nwd_example.py
src/: __init__.py  colors.py  config.py  main.py  strings.py
tests/: __init__.py  nwd_example.csv  nwd_example_nocash.csv  nwd_example_noexpend.csv  nwd_example_noincome.csv  nwd_example_nominor.csv  nwd_example_noshares.csv  nwd_example_nosuper.csv  nwd_tests.py  test_nwd.py
